--- a/8.1-Chi.sq.tests/lesson.yaml
+++ b/8.1-Chi.sq.tests/lesson.yaml
@@ -23,7 +23,7 @@
   Hint: Are any of the variables quantifiable? 
 
 - Class: cmd_question
-  Output: We're looking at two categorical variables here. Since we want to know if the treatments differ in their rates of success, we will use a chi-square test for association. First, let's tally the relapses for each treatment. Type -  (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion")).  NOte, the extra "( )" around the expression will print AND save tally as an object.
+  Output: We're looking at two categorical variables here. Since we want to know if the treatments differ in their rates of success, we will use a chi-square test for association. First, let's tally the relapses for each treatment. Type -  (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion")).  Note, the extra "( )" around the expression will print AND save tally as an object.
   CorrectAnswer: (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion"))
   AnswerTests: omnitest(correctExpr='(CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format=\"proportion\"))')
   Hint: Enter - (CocaineTab <- tally(~Relapse|Drug, data=CocaineTreatment, format="proportion")), note, make sure you have the extra "(" and ")" around the expression.
@@ -54,7 +54,7 @@
   Output: So, we got 2.25 as our first residual. If you didn't have R, you'd finish up by hand, but fortunately, we can compute the rest automatically!
 
 - Class: cmd_question
-  Output: Try it now using xchisq.test() - xchisq.test(tally(Relapse~Drug, data=CocaineTreatment))
+  Output: Try it now using xchisq.test - xchisq.test(tally(Relapse~Drug, data=CocaineTreatment))
   CorrectAnswer: xchisq.test(tally(Relapse~Drug, data=CocaineTreatment))
   AnswerTests: omnitest(correctExpr='xchisq.test(tally(Relapse~Drug, data=CocaineTreatment))')
   Hint: Enter - xchisq.test(tally(Relapse~Drug, data=CocaineTreatment))
