--- a/7.1-Normal.and.t.distribution/lesson.yaml
+++ b/7.1-Normal.and.t.distribution/lesson.yaml
@@ -23,7 +23,7 @@
   Output: Right. The useful thing about a t-distribution is that we can use it to calculate confidence intervals and p-values when making inference about a mean or difference in means when we have small sample sizes, SO LONG AS the data are normally distributed. At large sample sizes, the t-distribution can be used, but at that point, it looks quite similar to a normal distribution.
 
 - Class: figure
-  Output: Let's take a look at the shape of a t-distribution. Like the normal distribution, it is bell-shaped and symmetric.  But, it is wider than a normal distribution.  How much wider depends on  the 'degrees of freedom' (df) associated with the t-distribution. As we will see, df is determined by the sample size. 
+  Output: Let's take a look at the shape of a t-distribution. Like the normal distribution, it is bell-shaped and symmetric. But, it is wider than a normal distribution. How much wider depends on  the 'degrees of freedom' (df) associated with the t-distribution. As we will see, df is determined by the sample size. 
   Figure: tdists.R
   FigureType: new
 
@@ -41,7 +41,7 @@
   Output: As you already know, you can calculate the confidence interval for a statistic by using the following formula - statistic +/- z* x SE, where z* is the critical value of the normal distribution and depends on the confidence level you specify. For example, z* for a 95% confidence interval is 1.96 (although, we have used 2 as a rough approximation). When you have sufficiently large sample sizes, this works just fine. But, let's see what we get if we use a critical value from a t-distribution, t*, and also how this value might change depending on our sample size.
 
 - Class: cmd_question
-  Output: Let's confirm what we already know - when sample sizes are large, t* will be approximately 2 for a 95% confidence interval. To determine t*, we will use xqt(p= probability, df = degrees of freedom). For a 95% confidence interval, we would use p=c(0.025, 0.975).   Lets look at t* when our degrees of freedom = 50 (that is a fairly large sample size). Enter - xqt(p=c(.025,.975), df=50) 
+  Output: Let's confirm what we already know - when sample sizes are large, t* will be approximately 2 for a 95% confidence interval. To determine t*, we will use xqt(p= probability, df = degrees of freedom). For a 95% confidence interval, we would use p=c(0.025, 0.975). Let's look at t* when our degrees of freedom = 50 (that is a fairly large sample size). Enter - xqt(p=c(.025,.975), df=50) 
   CorrectAnswer: xqt(p=c(.025,.975), df=50)
   AnswerTests: omnitest(correctExpr='xqt(p=c(.025,.975), df=50)')
   Hint: Enter - xqt(p=c(.025,.975), df=50)
