--- a/9.2-Assumptions/lesson.yaml
+++ b/9.2-Assumptions/lesson.yaml
@@ -10,26 +10,26 @@
   Output: Welcome to Pre-lab 9.2. In this pre-lab, we will explore plots used to evaluate the assumptions of linear regression.  
 
 - Class: figure
-  Output: Lets start with our model relating temperature change to meal size in rattlesnakes.
+  Output: Let's start with our model relating temperature change to meal size in rattlesnakes.
   Figure: rattle2.R
   FigureType: new
    
 - Class: cmd_question
-  Output: "OK, lets look again at the summary of our fitted model.  Type: summary(snake.lm)" 
+  Output: "OK, let's look again at the summary of our fitted model.  Type: summary(snake.lm)" 
   CorrectAnswer: summary(snake.lm)
   AnswerTests: omnitest(correctExpr='summary(snake.lm)')
   Hint: Enter -  summary(snake.lm)
 
 
 - Class: mult_question
-  Output: Lets consider the assumptions of linear regression.  Select the correct item from the list below.
+  Output: Let's consider the assumptions of linear regression.  Select the correct item from the list below.
   AnswerChoices: the variance about the line is constant; the errors (distances between the points and the line) are normally distributed; the average temperature change at any given value of meal size falls on the line; all of the above; the cases are independent from one another 
   CorrectAnswer: all of the above
   AnswerTests: omnitest(correctVal='all of the above')
   Hint:  there is more than one correct assumption listed
 
 - Class: cmd_question
-  Output: "R has some built in plots for exploring these assumptions. First, lets set up the plotting window so we can see 4 plots at a time.  We can do this by typing par(mfrow=c(2,2)).  This tells R that you want to plot in multiple frames, by row, with 2 rows and 2 columns. Go ahead and type: par(mfrow=c(2,2))" 
+  Output: "R has some built in plots for exploring these assumptions. First let's set up the plotting window so we can see 4 plots at a time. We can do this by typing par(mfrow=c(2,2)). This tells R that you want to plot in multiple frames, by row, with 2 rows and 2 columns. Go ahead and type: par(mfrow=c(2,2))" 
   CorrectAnswer: par(mfrow=c(2,2))
   AnswerTests: omnitest(correctExpr='par(mfrow=c(2,2))')
   Hint: Enter -  par(mfrow=c(2,2))
@@ -46,7 +46,7 @@
     The number of observations here is small, so it is difficult to say too much, but I would say this plot looks "OK".  Also note that there is one large outlier (marked with a 17, indicating the 17th observation in the data set may be worth checking).  
   
 - Class: text
-  Output: The top right plot is called a QQ plot and is used to evaluate the normality assumption.  We are looking for observations to fall roughly on the line. I would say this plot also looks "OK".
+  Output: The top right plot is called a QQ plot and is used to evaluate the normality assumption. We are looking for observations to fall roughly on the line. I would say this plot also looks "OK".
   
 - Class: cmd_question
   Output: Now, let's look at another example with more data - specifically, the StudentSurvey dataset we used in week 1 (you've come full circle).  Click on StudentSurvey.
@@ -87,7 +87,7 @@
   Hint:  Do the residuals look to be equally spread out as you move along the x-axis?
 
 - Class: mult_question
-  Output: Yes, the residuals look equally spread out as you move along the x-axis.  Based on the uppper right plot, do you think the normality assumption is reasonable?
+  Output: Yes, the residuals look equally spread out as you move along the x-axis. Based on the uppper right plot, do you think the normality assumption is reasonable?
   AnswerChoices: Yes; No
   CorrectAnswer: Yes
   AnswerTests: omnitest(correctVal='Yes')
