--- a/1.1-Intro.to.R/lesson.yaml
+++ b/1.1-Intro.to.R/lesson.yaml
@@ -27,10 +27,10 @@
   FigureType: new
   
 - Class: exact_question
-  Output: "Here's your only question for Pre-Lab 1.1 - what number is listed next to 'first' in your workspace (the top-right panel)? Hint: Choose a number that is labeled "Value", not one labeled "Length," if either of those two words are visible."
+  Output: Here's your only question for Pre-Lab 1.1 - what number is listed next to 'first' in your workspace (the top-right panel)? Hint - Choose a number that is labeled "Value", not one labeled "Length," if either of those two words are visible."
   CorrectAnswer: 17
   AnswerTests: omnitest(correctVal=17)
-  Hint: "This number is in the top right corner panel, directly to the right of the word 'first'."
+  Hint: This number is in the top right corner panel, directly to the right of the word 'first'.
   
 - Class: mult_question
   Output: Good work! You've completed Pre-Lab 1.1. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
