--- a/3.1-Boxplots/lesson.yaml
+++ b/3.1-Boxplots/lesson.yaml
@@ -22,7 +22,7 @@
   FigureType: new
 
 - Class: cmd_question
-  Output: Though we could preview this dataset by clicking on its name in our workspace (the upper right hand panel), we're going to preview it using the head() function instead. This function has the advantage of working properly when 'knitted' in an Rmd file (which is what you do after completing lab), so it's good to get into the habit of using head() to explore datasets! Try it now - use the function head() with the name of the dataset (i.e., Cereal) inside of the parentheses.
+  Output: Though we could preview this dataset by clicking on its name in our workspace (the upper right hand panel), we're going to preview it using the head() function instead. This function has the advantage of working properly when 'knitted' in an Rmd file (which is what you do after completing a lab), so it's good to get into the habit of using head() to explore datasets! Try it now - use the function head() with the name of the dataset (i.e., Cereal) inside of the parentheses.
   CorrectAnswer: head(Cereal)
   AnswerTests: omnitest(correctExpr='head(Cereal)')
   Hint: We can look in the workspace (upper right panel) to see what the data is called - in this case, it's called Cereal. All we need to do is put that word inside of the head() function. Enter - head(Cereal).  REMEMBER, R is case sensitive!
@@ -46,13 +46,13 @@
   Output: Looks like the median number of calories may differ slightly for the cereals made by these 3 companies, but the ranges overlap quite a bit. We'll learn in Chapter 8 how to determine if these differences are statistically significant. For now, however, a box and whisker plot is a useful way to do some exploratory data analysis.
 
 - Class: cmd_question
-  Output: Let's make another box-and-whisker plot by modifying your previous code.  Explore whether the Sodium content differs among the different companies!
+  Output: Let's make another box-and-whisker plot by modifying your previous code.  Explore whether the Sodium content differs among the different companies! Hint - You can access the previous command you ran by hitting the up arrow on your keyboard while in the Console. You can then modify it.
   CorrectAnswer: gf_boxplot(Sodium~Company, data=Cereal)
   AnswerTests: omnitest(correctExpr='gf_boxplot(Sodium~Company, data=Cereal)')
   Hint: Not much needs to change from the last bit of code we ran. Since we're now looking at Sodium instead of Calories, we just need to swap those two variable names - gf_boxplot(Sodium~Company, data=Cereal).
 
 - Class: cmd_question
-  Output: Now, time to get fancy.  We can also add points to our plot using "pipes" (%>%). Pipes provide a handy way to string together or combine multiple pieces of code. Try the following, gf_boxplot(Sodium~Company, data=Cereal)%>%gf_point().
+  Output: Now, time to get fancy.  We can also add points to our plot using "pipes" (%>%). Pipes provide a handy way to string together or combine multiple pieces of code. Try the following - gf_boxplot(Sodium~Company, data=Cereal)%>%gf_point(). By the way, the hotkey for pipes (on PC) is control+alt+M.
   CorrectAnswer: gf_boxplot(Sodium~Company, data=Cereal)%>%gf_point()
   AnswerTests: omnitest(correctExpr='gf_boxplot(Sodium~Company, data=Cereal)%>%gf_point()')
   Hint: Type, gf_boxplot(Sodium~Company, data=Cereal)%>%gf_point()
