--- a/3.2-Scatterplots.and.favstats/lesson.yaml
+++ b/3.2-Scatterplots.and.favstats/lesson.yaml
@@ -52,7 +52,7 @@
   
 - Class: mult_question
   Output: Looking at this graph, what can we say about the relationship between Sugars and Calories in this dataset?
-  AnswerChoices: Sugars and Calories are postively associated;There is no relationship between Sugars and Calories;Sugars and Calories are negatively associated
+  AnswerChoices: Sugars and Calories are positively associated;There is no relationship between Sugars and Calories;Sugars and Calories are negatively associated
   CorrectAnswer: There is a generally positive relationship
   AnswerTests: omnitest(correctVal= 'Sugars and Calories are postively associated')
   Hint: • A positive association means that values of one variable tend to be higher when values of the other variable are higher. A negative association means that values of one variable tend to be lower when values of the other variable are higher.W Two variables are not associated if knowing the value of one variable does not give you any information about the value of the other variable
