--- a/3.4-Do.loops/lesson.yaml
+++ b/3.4-Do.loops/lesson.yaml
@@ -8,7 +8,7 @@
 
 
 - Class: text
-  Output: You're probably wondering why the difference between sampling and resampling matters - well, you're in luck, because you will be finding out this week when you learn about bootstrapping! For now, we're going to look at a critical tool in R that will facilitate bootstrapping, the 'do' loop.
+  Output: You're probably wondering why the difference between sampling and resampling matters - well, you're in luck, because you will be finding out when you learn about bootstrapping! For now, we're going to look at a critical tool in R that will facilitate bootstrapping, the 'do' loop.
   
 - Class: text
   Output: Just to illustrate the power of a do loop, imagine there is a mysterious government agent who gives you 1 cent for each time you can compute 2*2 in R. You can sit there for hours typing 2*2 over and over, but surely there is a better way...
@@ -20,13 +20,12 @@
   Hint: The notation will look weird at first. Just try this out - do(100)*{2*2}
 
 - Class: text
-  Output: You'll see that using do(100)* in front of that expression quite literally 'did' it 100 times. This works for anything you put inside of the braces to the right. Now, you wouldn't have to go to college, because your payout is limited only by how huge you make your do loop.
+  Output: You'll see that using do(100)* in front of that expression quite literally 'did' it 100 times. This works for anything you put inside of the curly braces to the right of do(). Now, you wouldn't have to go to college, because your payout is limited only by how huge you make your do loop.
 
 - Class: cmd_question
-  Output: Let's use a more realistic and less lucrative example. Just so we have something to work with, let's generate some data. We'll generate 15 numbers, pulled at random from a normal distribution (this is a bell-shaped distribution that depends on two parameters, a mean and a standard deviation - you will learn more about the normal distribution in Chapter 5!). We're going to pretend that these numbers are the canopy heights of trees in rural Panama. Enter - bigtrees<-data.frame(canopy=rnorm(n=15,mean=1000,sd=200)). This will create a dataset with a single variable, canopy, and 15 observations.
-  CorrectAnswer: bigtrees<-data.frame(canopy=rnorm(n=15,mean=1000,sd=200))
-  AnswerTests: omnitest(correctExpr='bigtrees<-data.frame(canopy=rnorm(n=15,mean=1000,sd=200))', strict=FALSE)
-  Hint: n represents the number of numbers we want, and mean and sd are the mean and sd of our normal distrubution. Enter - bigtrees<-dataframe(canopy=rnorm(n=15,mean=1000,sd=200))
+  Output: Let's use a more realistic and less lucrative example. Just so we have something to work with, let's generate some data. We'll generate 15 numbers, pulled at random from a Normal distribution (this is a bell-shaped distribution that depends on two parameters, a mean and a standard deviation - you will learn more about the Normal distribution in Chapter 5!). We're going to pretend that these numbers are the canopy heights of trees in rural Panama. Enter - bigtrees<-data.frame(canopy=rnorm(n=15,mean=1000,sd=200)). This will create a dataset with a single variable, canopy, and 15 observations.
+  AnswerTests: omnitest(correctExpr=c('bigtrees<-data.frame(canopy=rnorm(n=15,mean=1000,sd=200))', 'bigtrees=data.frame(canopy=rnorm(n=15,mean=1000,sd=200))'), strict=FALSE)
+  Hint: n represents the number of numbers we want, and mean and sd are the mean and sd of our Normal distribution. Enter - bigtrees<-dataframe(canopy=rnorm(n=15,mean=1000,sd=200))
 
 - Class: cmd_question
   Output: Let's take a look at these trees. Enter bigtrees in the console to see the values we got. 
@@ -35,10 +34,10 @@
   Hint: Nothing fancy, just enter - bigtrees
   
 - Class: text
-  Output: Now we'll put all of that previous sampling and resampling experience to use. Let's say that we want to take the mean of a resample (note, with replacement) of our bigtrees data. Each and every time we do this, the mean is going to be slightly different, because resample is going to repeat and exclude different trees.
+  Output: Now we'll put all of that previous sampling and resampling experience to use. Let's say that we want to take the mean of a resample (note, with replacement) of our bigtrees data. Each and every time we do this, the mean is going to be slightly different because resample is going to repeat and exclude different trees.
 
 - Class: cmd_question
-  Output: Calculating the mean for each of several resampled groups of observations would be really time consuming if we had to do this one by one. Fortunately, we won't have to do that, because we can use our newest tool - the do loop. Try it now by taking the mean of 10 resamples - do(10)*{mean(~canopy, data=resample(bigtrees))}
+  Output: Calculating the mean for each of several resampled sets would be really time consuming if we had to do it one by one. Fortunately, we won't have to do that because we can use our newest tool - the do loop. Try it now by taking the mean of 10 resamples - do(10)*{mean(~canopy, data=resample(bigtrees))}
   CorrectAnswer: do(10)*{mean(~canopy, data=resample(bigtrees))}
   AnswerTests: omnitest(correctExpr='do(10)*{mean(~canopy, data=resample(bigtrees))}')
   Hint: The toughest thing is getting the braces right! Enter - do(10)*{mean(~canopy, data=resample(bigtrees))}
@@ -48,7 +47,7 @@
   Output: Now we have 10 different means, each slightly different than the other, because each resample of bigtrees is slightly different. 
 
 - Class: cmd_question
-  Output: Just for illustration, try the same code using sample instead of resample - do(10)*{mean(~canopy, data=sample(bigtrees))}. Remember, you can use the uparrow to get back to the last line of code, which you can then modify!
+  Output: Just for illustration, try the same code using sample instead of resample - do(10)*{mean(~canopy, data=sample(bigtrees))}. Remember, you can use the up arrow to get back to the last line of code you executed, which you can then modify!
   CorrectAnswer: do(10)*{mean(~canopy, data=sample(bigtrees))}
   AnswerTests: omnitest(correctExpr='do(10)*{mean(~canopy, data=sample(bigtrees))}')
   Hint: No need to change much - do(10)*{mean(~canopy, data=sample(bigtrees))}
